# digilogic

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Makefile.old  NOTICE  README.md  bench.sh  build.rs  build.zig  build.zig.zon  compile_commands.json  graph.dot  index.html  run-dev.bat  run-dev.ps1  run-dev.sh  test.sh  vcpkg-configuration.json  vcpkg.json
.github/: FUNDING.yml
.github/workflows/: build.yml
assets/: Info.plist  sw.js
crates/digilogic/: Cargo.toml  index.html
crates/digilogic/assets/: logo.icns  manifest.json
crates/digilogic/assets/schemalib/: LICENSE
crates/digilogic/assets/testdata/: digital_project.dlp  large.yosys  medium.dig  medium.yosys  mux.dig  small.dig  small.yosys  test_project.dlp
crates/digilogic/src/: app.rs  canvas.rs  main.rs  ui.rs  ux.rs
crates/digilogic/src/ui/: bez_path.rs  canvas.rs  draw.rs  explorer.rs  palette.rs  settings.rs
crates/digilogic/src/ux/: events.rs  root_fsm.rs  states.rs  systems.rs
crates/digilogic_circuitfile/: Cargo.toml
crates/digilogic_circuitfile/assets/testdata/: large.dlc  small.dlc
crates/digilogic_circuitfile/src/: lib.rs
crates/digilogic_core/: Cargo.toml
crates/digilogic_core/src/: bundles.rs  components.rs  events.rs  fixed.rs  init.rs  lib.rs  resources.rs  shared_str.rs  spatial_index.rs  states.rs  symbol.rs  transform.rs  visibility.rs
crates/digilogic_core2/: Cargo.toml
crates/digilogic_core2/src/: builder.rs  core.rs  db.rs  intern.rs  lib.rs  model.rs  refs.rs  rtlil.rs  structs.rs  table.rs  yosys.rs
crates/digilogic_core2/src/db/: builder.rs
crates/digilogic_core2/src/model/: builder.rs  value.rs
crates/digilogic_core2/src/table/: childindex.rs  revindex.rs  secondary.rs  watcher.rs
crates/digilogic_core2/src/yosys/: stage1.rs  stage2.rs  stage3.rs
crates/digilogic_dioxus/: Cargo.toml  Dioxus.toml  README.md
crates/digilogic_dioxus/assets/: tailwind.css
crates/digilogic_dioxus/src/: core.rs  main.rs
crates/digilogic_dioxus/src/components/: hero.rs
crates/digilogic_gsim/: Cargo.toml
crates/digilogic_gsim/src/: lib.rs  main.rs
crates/digilogic_layout/: Cargo.toml
crates/digilogic_layout/src/: lib.rs
crates/digilogic_netcode/: Cargo.toml
crates/digilogic_netcode/src/: client.rs  lib.rs  server.rs
crates/digilogic_routing/: Cargo.toml
crates/digilogic_routing/src/: bit_grid.rs  fixup.rs  graph.rs  lib.rs  path_finding.rs  routing.rs  segment_tree.rs
crates/digilogic_serde/: Cargo.toml
crates/digilogic_serde/src/: circuitfile.rs  digital.rs  json.rs  lib.rs  yosys.rs
crates/digilogic_serde/src/digital/: circuitfile.rs
crates/digilogic_serde/src/json/: circuitfile.rs  mod.rs
crates/digilogic_serde/src/yosys/: netlist.rs
crates/digilogic_serde/testdata/: large.dlc  large_opt.yosys  medium.dlc  small.dlc
crates/digilogic_ux/: Cargo.toml
crates/digilogic_ux/src/: events.rs  lib.rs  spatial_index.rs  systems.rs
docs/: README.md  _core_entities.md  _why_bevy_ecs.md
res/: Info.plist  app.rc  noto_sans_regular.json  symbols.sfd
src/: app.rs  apple.m  assets.c  assets.h  bench.c  draw.rs  font.h  gen.c  grid.rs  lib.rs  main.c  main.h  main.rs  nonapple.c  noto_sans_regular.c  test.c
src/autoroute/: autoroute.c  autoroute.h
src/avoid/: avoid.c  avoid.cpp  avoid.h
src/c/: lib.c  lib.h
src/c/autoroute/: autoroute.c  autoroute.h
src/c/core/: changelog.c  circuit.c  core.h  errors.c  load.c  save.c
src/c/render/: draw.h
src/c/ux/: actions.c  input.c  ux.c
src/common/: log.h
src/core/: bvh.c  changelog.c  circuit.c  core.h  core_test.c  load.c  newcircuit.c  newstructs.h  objects.c  save.c  smap.c  structdesc.h  structdescs.c  structdescs.h  structs.h  timer.c
src/import/: digital.c  import.h
src/render/: draw.c  draw.h  draw_test.c  draw_test.h  fons_nuklear.c  fons_nuklear.h  fons_sgp.c  fons_sgp.h  polyline.c  polyline.h  render.h  sokol_nuklear.c  sokol_nuklear.h
src/shaders/: alphaonly.glsl  alphaonly.h  msdf.glsl  msdf_shader.h
src/ui/: loadsave.c  ui.c  ui.h
src/ux/: autoroute.c  input.c  snap.c  undo.c  ux.c  ux.h  ux_test.c
src/view/: view.c  view.h  view_test.c
testdata/: alu_1bit_2gatemux.dig  alu_1bit_2inpgate.dig
