[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Ryan \"rj45\" Sanche", "Mathis Rech", "Kenneth Wilke"]
license = "Apache-2.0"
rust-version = "1.79"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = "warn"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = 2

[workspace.dependencies]
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wgpu = "0.20.1"
egui = "0.28.1"
egui_dock = { version = "0.13.0", features = ["serde"] }
egui-wgpu = "0.28.1"
eframe = { version = "0.28.1", default-features = false, features = [
    "x11",
    "wayland",
    "accesskit",
    "default_fonts",
    "wgpu",
    "persistence",
] }
rfd = "0.14.1"
vello = "0.2.1"
vello_svg = "0.3"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
bevy_core = "0.14.0"
bevy_ecs = "0.14.0"
bevy_reflect = "0.14.0"
bevy_derive = "0.14.0"
bevy_app = "0.14.0"
bevy-inspector-egui = { version = "0.25.1", default-features = false, features = [
    "highlight_changes",
] }
aery = "0.7.4"
smallvec = "1.13"
static_assertions = "1.1.0"
bitflags = "2.6.0"
ahash = "0.8.11"
serde-xml-rs = "0.6"
bvh-arena = "1.1"
