[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Ryan \"rj45\" Sanche", "Mathis Rech", "Kenneth Wilke"]
license = "Apache-2.0"
rust-version = "1.79"

[workspace.lints.rust]
explicit-outlives-requirements = "warn"
keyword-idents-2024 = "forbid"
missing-debug-implementations = "warn"
non-ascii-idents = "forbid"
non-local-definitions = "forbid"
redundant-lifetimes = "warn"
rust_2024_compatibility = "forbid"
single-use-lifetimes = "warn"
unit-bindings = "warn"
unnameable-types = "warn"
unsafe-op-in-unsafe-fn = "forbid"
unstable-features = "forbid"
unused-crate-dependencies = "warn"
unused-lifetimes = "warn"
unused-qualifications = "warn"
variant-size-differences = "warn"

[workspace.lints.clippy]
all = "warn"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = 2

[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wgpu = "0.20.1"
egui = "0.28.1"
egui_dock = { version = "0.13.0", features = ["serde"] }
egui-wgpu = "0.28.1"
eframe = { version = "0.28.1", default-features = false, features = [
    "x11",
    "wayland",
    "accesskit",
    "default_fonts",
    "wgpu",
    "persistence",
] }
rfd = "0.14.1"
vello = "0.2.1"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
bevy_core = "0.14.1"
bevy_tasks = "0.14.1"
bevy_utils = "0.14.1"
bevy_ecs = { version = "0.14.1", features = [
    "multi_threaded",
    "serialize",
] }
bevy_reflect = "0.14.1"
bevy_derive = "0.14.1"
bevy_app = "0.14.1"
bevy_log = "0.14.1"
bevy-inspector-egui = { version = "0.25.1", default-features = false, features = [
    "highlight_changes",
] }
aery = "0.7.4"
smallvec = "1.13"
static_assertions = "1.1.0"
bitflags = "2.6.0"
ahash = "0.8.11"
serde-xml-rs = "0.6"
bvh-arena = "1.1"
priority-queue = "2.0.3"
