[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Ryan \"rj45\" Sanche", "Mathis Rech", "Kenneth Wilke"]
license = "Apache-2.0"
rust-version = "1.79"

[workspace.lints.rust]
explicit-outlives-requirements = "warn"
keyword-idents-2024 = "forbid"
missing-debug-implementations = "warn"
non-ascii-idents = "forbid"
non-local-definitions = "forbid"
redundant-lifetimes = "warn"
rust_2024_compatibility = { level = "warn", priority = -1 }
single-use-lifetimes = "warn"
unit-bindings = "warn"
unnameable-types = "warn"
unsafe-op-in-unsafe-fn = "forbid"
unstable-features = "forbid"
unused-crate-dependencies = "warn"
unused-lifetimes = "warn"
unused-qualifications = "warn"
variant-size-differences = "warn"

[workspace.lints.clippy]
all = "warn"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = 2

[workspace.dependencies]
anyhow = "1.0"
tracing = "0.1.40"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ron = "0.8.1"
rmp-serde = "1.3.0"
serde_bytes = "0.11.15"
wgpu = "22.1.0"
egui = "0.29.1"
egui_dock = { version = "0.14.0", features = ["serde"] }
egui-wgpu = "0.29.1"
eframe = { version = "0.29.1", default-features = false, features = [
    "x11",
    "wayland",
    "accesskit",
    "default_fonts",
    "wgpu",
    "persistence",
] }
rfd = "0.14.1"
vello = "0.3.0"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
bevy_core = "0.15.0"
bevy_tasks = "0.15.0"
bevy_ecs = { version = "0.15.0", features = [
    "multi_threaded",
    "serialize",
] }
bevy_reflect = "0.15.0"
bevy_derive = "0.15.0"
bevy_app = "0.15.0"
bevy_log = "0.15.0"
bevy_time = "0.15.0"
bevy_state = { version = "0.15.0", default-features = false, features = [
    "bevy_app",
    "bevy_reflect",
] }
bevy-inspector-egui = { version = "0.28.0", default-features = false, features = [
    "highlight_changes",
] }
aery = "0.8.0"
smallvec = "1.13"
static_assertions = "1.1.0"
bitflags = "2.6.0"
ahash = "0.8.11"
serde-xml-rs = "0.6"
bvh-arena = "1.1"
priority-queue = "2.0.3"
renet = "1.0.0"
renet_netcode = "1.0.0"
petgraph = "0.6.5"
clap = { version = "4.5.16", features = ["derive"] }
bytemuck = "1.17.0"
