[package]
name = "digilogic"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = ["inspector"]
inspector = ["dep:bevy-inspector-egui", "digilogic_core/inspector"]

[dependencies]
log.workspace = true
serde.workspace = true
wgpu.workspace = true
egui.workspace = true
egui-wgpu.workspace = true
eframe.workspace = true
rfd.workspace = true
vello.workspace = true
vello_svg.workspace = true
bevy_core.workspace = true
bevy_ecs.workspace = true
bevy_reflect.workspace = true
bevy_app.workspace = true
bevy-inspector-egui = { workspace = true, optional = true }
bitflags.workspace = true

digilogic_core = { path = "../digilogic_core" }
digilogic_routing = { path = "../digilogic_routing" }
digilogic_serde = { path = "../digilogic_serde" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures.workspace = true
web-sys.workspace = true
