[package]
name = "digilogic"
description = "Circuit editor and simulator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = ["inspector"]
inspector = ["dep:bevy-inspector-egui", "digilogic_core/inspector"]
trace = ["bevy_ecs/trace", "bevy_app/trace", "bevy_log/trace", "bevy_log/tracing-tracy"]

[dependencies]
serde.workspace = true
wgpu.workspace = true
egui.workspace = true
egui_dock.workspace = true
egui-wgpu.workspace = true
eframe.workspace = true
rfd.workspace = true
vello.workspace = true
bevy_core.workspace = true
bevy_ecs.workspace = true
bevy_reflect.workspace = true
bevy_derive.workspace = true
bevy_app.workspace = true
bevy_log.workspace = true
bevy_time.workspace = true
bevy_state.workspace = true
bevy-inspector-egui = { workspace = true, optional = true }
aery.workspace = true
bitflags.workspace = true

digilogic_core = { path = "../digilogic_core" }
digilogic_routing = { path = "../digilogic_routing" }
digilogic_serde = { path = "../digilogic_serde" }
digilogic_netcode = { path = "../digilogic_netcode", features = ["client"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap.workspace = true

digilogic_netcode = { path = "../digilogic_netcode", features = ["server"] }
digilogic_gsim = { path = "../digilogic_gsim" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures.workspace = true
web-sys.workspace = true
