[package]
name = "digilogic_core"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
bevy_ecs.workspace = true
bevy_app.workspace = true
smallvec.workspace = true
static_assertions.workspace = true
