[package]
name = "digilogic_core"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
inspector = ["dep:bevy-inspector-egui"]

[dependencies]
serde.workspace = true
egui.workspace = true
bevy_ecs.workspace = true
bevy_hierarchy.workspace = true
bevy_reflect.workspace = true
bevy_derive.workspace = true
bevy_app.workspace = true
bevy-inspector-egui = { workspace = true, optional = true }
smallvec.workspace = true
bitflags.workspace = true
static_assertions.workspace = true
bvh-arena.workspace = true
