[package]
name = "digilogic_core2"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true

thiserror = "2.0.11"
slotmap = { version = "1.0.7", features = ["serde"] }
nohash-hasher = "0.2.0"
bloomfilter = "3.0.1"
foldhash = "0.1.4"
