[package]
name = "digilogic_gsim"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
ahash.workspace = true
gsim = "1.1.2"

digilogic_netcode = { path = "../digilogic_netcode", features = ["server"] }
