[package]
name = "digilogic_gsim"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
ahash.workspace = true
static_assertions.workspace = true
bytemuck.workspace = true
gsim = "1.1.3"

digilogic_netcode = { path = "../digilogic_netcode", features = ["server"] }
