[package]
name = "digilogic_netcode"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
client = ["dep:bevy_ecs", "dep:bevy_app", "dep:bevy_time", "dep:digilogic_core", "renet/bevy"]
server = ["dep:spin_sleep"]

[dependencies]
serde.workspace = true
rmp-serde.workspace = true
serde_bytes.workspace = true
bevy_ecs = { workspace = true, optional = true }
bevy_app = { workspace = true, optional = true }
bevy_time = { workspace = true, optional = true }
ahash.workspace = true
renet.workspace = true
spin_sleep = { workspace = true, optional = true }

digilogic_core = { path = "../digilogic_core", optional = true }
