[package]
name = "digilogic_routing"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
bevy_ecs.workspace = true
bevy_reflect.workspace = true
bevy_app.workspace = true
bitflags.workspace = true
ahash.workspace = true

digilogic_core = { path = "../digilogic_core" }
