[package]
name = "digilogic_routing"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
tracing.workspace = true
serde.workspace = true
bevy_tasks.workspace = true
bevy_ecs.workspace = true
bevy_reflect.workspace = true
bevy_derive.workspace = true
bevy_app.workspace = true
bevy_log.workspace = true
aery.workspace = true
smallvec.workspace = true
ahash.workspace = true
priority-queue.workspace = true

digilogic_core = { path = "../digilogic_core" }
