[package]
name = "digilogic_serde"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
bevy_ecs.workspace = true
bevy_reflect.workspace = true
bevy_app.workspace = true
bevy_hierarchy.workspace = true

digilogic_core = { path = "../digilogic_core" }
